--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dnspython==1.16.0
 Flask==1.1.1
 Flask-PyMongo==2.3.0
 get==2019.4.13
+gunicorn==19.9.0
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
@@ -18,3 +19,4 @@ request==2019.4.13
 requests==2.22.0
 urllib3==1.25.3
 Werkzeug==0.15.5
+
